--- a/template.Rmd
+++ b/template.Rmd
@@ -5,13 +5,30 @@ output: github_document
 
 # Data Import CSVs
 
-################
-#importing readr
-################
 
-library (tidyverse
-)
+#importing packages
+
+
+library (tidyverse)
 
 library (readr)
 
-read_csv
+litter_df <- read_csv ("./data_import_examples/FAS_litters.csv")
+
+litter_df <- janitor::clean_names(litter_df)
+
+litter_df
+
+head (litter_df)
+
+view (litter_df)
+
+skimr::skim(litter_df)
+
+
+help (read_csv)
+
+# Other File Formats
+
+
+
